compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__echo_followed_by_no_expression_7.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  #(1, echo)\n}\n"
---
error: Invalid echo use
  ┌─ /src/one/two.gleam:3:8
  │
3 │   #(1, echo)
  │        ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
